# rss-digest

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: config.example.yaml  feeds_tech.yaml
src/rss_digest/: __init__.py  cli.py  digest.py  fetcher.py  store.py
src/rss_digest/channels/: __init__.py  email.py  signal.py  slack.py
tests/: test_channels.py  test_digest.py  test_fetcher.py  test_store.py
